# zwdx

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
test/: mnist.py  test.py
zwdx/: .env  __init__.py  run_all.sh  setup.sh  test.py  utils.py
zwdx/client/: client.py  training.py  utils.py
zwdx/gpu_client/: gpu_client.py  run_gpu_client.sh  training.py
zwdx/server/: app.py  core_routes.py  globals.py  job.py  rooms.py  run_server.sh  server.py
zwdx/server/client/: __init__.py  client_node.py  client_pool.py
zwdx/server/db/: __init__.py  database.py  run_db.sh
zwdx/server/gpu_client_node/: __init__.py  gpu_client_node.py  gpu_client_pool.py
zwdx/server/job/: __init__.py  job.py  job_pool.py  job_routes.py
zwdx/server/room/: __init__.py  room.py  room_pool.py  room_routes.py
zwdx/ui/: package-lock.json  package.json
zwdx/ui/src/: App.css  App.jsx  api.js  reportWebVitals.js
zwdx/ui/src/components/: JobDetails.jsx  JobProgressGraph.jsx
zwdx/ui/src/pages/: HomePage.jsx  RoomPage.jsx
zwdx/ui/src/styles/: HomePage.css  JobDetails.css  RoomPage.css  variables.css
