[project]
name = "zwdx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudpickle>=3.1.1",
    "deepspeed>=0.17.6",
    "dill>=0.4.0",
    "eventlet>=0.40.3",
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
    "numpy>=2.3.3",
    "requests>=2.32.5",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "websocket-client>=1.8.0",
]
